lang/examples/bad/03-04-assignment.wdr
fun main(): Void {
  var a: Int = 42;
  a = "test";

  return;
}